--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/effects": "^15.1.0",
     "@ngrx/store": "^15.1.0",
     "@ngrx/store-devtools": "^15.1.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -38,6 +39,7 @@
     "@angular/cli": "~15.0.5",
     "@angular/compiler-cli": "^15.0.0",
     "@ngrx/eslint-plugin": "^15.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.44.0",
     "@typescript-eslint/parser": "5.44.0",
